force-app/main/default/objects/ST_DepositInformation__c/ST_DepositInformation__c.object-meta.xml
<CustomObject>
    <label>入金情報</label>
    <nameField>
        <displayFormat>ST-D{0000}</displayFormat>
        <label>入金情報名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>