force-app/main/default/objects/ST_DepositInformation__c/fields/ST_amount__c.field-meta.xml
<CustomField>
    <fullName>ST_amount__c</fullName>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>