force-app/main/default/objects/ST_DepositInformation__c/fields/ST_field_name__c.field-meta.xml
<CustomField>
    <fullName>ST_field_name__c</fullName>
    <label>現場名</label>
    <referenceTo>ST_ConstructionSite__c</referenceTo>
    <relationshipLabel>入金情報</relationshipLabel>
    <relationshipName>ST_field_name_ST_ConstructionSite</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>