force-app/main/default/objects/ST_DepositInformation__c/fields/ST_payment_date__c.field-meta.xml
<CustomField>
    <fullName>ST_payment_date__c</fullName>
    <label>入金日</label>
    <type>Date</type>
</CustomField>