force-app/main/default/objects/ST_DepositInformation__c/fields/ST_payment_info_number__c.field-meta.xml
<CustomField>
    <fullName>ST_payment_info_number__c</fullName>
    <label>入金情報番号</label>
    <length>225</length>
    <type>Text</type>
</CustomField>